--- a/style.css
+++ b/style.css
@@ -2,92 +2,126 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-}
-
-header {
-	background-color: #333;
+  }
+  
+  header {
+	background-image: url('images/zBFyYyobXo1ZPOB1dxqC--1--gzl85.jpg');
+	background-size: cover;
+	background-position: center;
 	color: #fff;
 	padding: 20px;
-}
+	display: flex;
+	flex-direction: column;
+  }
 
-h1 {
+  .header-top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+
+  .hours {
+	font-size: 14px;
+	margin-left: 20px;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+	4px 4px 8px rgba(0, 0, 0, 0.3);  }
+
+  .hours,
+  .hours a {
+	color: #fff;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+	4px 4px 8px rgba(0, 0, 0, 0.3);  }
+
+  h1 {
 	margin: 0;
 	font-size: 36px;
-}
-
-h2 {
-	margin: 0;
-	font-size: 24px;
-}
-
-nav ul {
+	font-weight: bold;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+	4px 4px 8px rgba(0, 0, 0, 0.3);  }
+  
+  nav ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-}
-
-nav li {
+  }
+  
+  nav li {
 	display: inline-block;
 	margin-right: 20px;
-}
+  }
+  
+  nav a {
+	color: #fff;   
+	margin-top: 10px;
+	text-decoration: none;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
+	4px 4px 8px rgba(0, 0, 0, 0.3);  }
+  
+  nav a:hover {
+	text-decoration: underline;
+  }
 
-nav a {
+  nav ul li {
+	display: inline;
+	margin-right: 10px;
+  }
+
+  nav ul li a {
 	color: #fff;
 	text-decoration: none;
-}
-
-nav a:hover {
-	text-decoration: underline;
-}
-
-main {
+  }
+  
+  main {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 20px;
 	padding: 20px;
-}
-
-section {
+  }
+  
+  section {
 	padding: 20px;
 	background-color: #f2f2f2;
 	border: 1px solid #ccc;
-}
-
-img {
+	text-shadow: .5px .5px 1px rgba(0, 0, 0, 0.5);
+  }
+  
+  img {
 	max-width: 100%;
 	height: auto;
-}
-
-ul {
+	border: 1px solid #ccc;
+  }
+  
+  ul {
 	margin: 0;
 	padding: 0;
 	list-style: disc;
 	margin-left: 20px;
-}
-
-.slider {
+  }
+  
+  .slider {
 	width: 100%;
 	overflow: hidden;
-	  }
+  }
   
-	  .slide {
+  .slide {
 	display: none;
-	  }
+  }
   
-	  .slide img {
+  .slide img {
 	width: 100%;
 	height: auto;
-	  }
+	border: 1px solid #ccc;
+  }
   
-	  .slide.active {
-	display: show;
-	  } 
-
-footer {
+  .slide.active {
+	display: block;
+  }
+  
+  footer {
 	background-color: #333;
-}
-
-@media screen and (max-width: 768px) {
+  }
+  
+  @media screen and (max-width: 768px) {
 	/* Styles for smaller screens */
   }
   
